--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     gap:0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #tagline{
     text-align: center;
@@ -22,13 +23,13 @@
     display:flex;
     margin-left: 50px;
     color:#ffffff;
-    width:800px;
+    width:780px;
     height:50px;
     padding-top: 25px;
-    font-weight:600;
-    font-size:20px;
+    font-weight:300;
+    font-size:19px;
     /* margin-right:30px; */
-    column-gap: 20px;
+    column-gap: 23px;
         height:28px;
     }
     #logo1{
@@ -81,26 +82,36 @@
     display:flex;
     height:50px;
     margin-left:50px;
-    column-gap: 10px;
+    column-gap: 22px;
     padding-top:25px;
 }
-#search{
+.search{
     color:#ffffff;
     font-size: 16px;
     font-weight: 600;
 }
 .searchbar{
-    border-style:solid;
-    border-width: 2px;
-    border-color: #ff5000;
+    width: 200pxpx;
+    height: 50px;;
     padding-top: 10px;
-    padding-right: 5px;
+    /* padding-right: 5px; */
+    /* padding-left: 20px; */
+    margin-left: 35px;
     display:flex;
-    column-gap: 10px;
+    column-gap: 12px;
     width:100px;
     height: 25px;
     margin-top:18px;
+    border-color: #ffffff;
+    border-style: solid ;
+    border-width: 0.5px;
+
 }
+ .searchbar:hover{
+    border-style:solid;
+    border-width: 1px;
+    border-color:#ffffff;
+} 
 .coupon{
     color:white;
     background-color:#5a5224;
@@ -199,7 +210,7 @@ margin-left: 32px;
     padding-top:50px;
     padding-bottom:50px;
     text-align: center;
-    font-weight:800;
+    font-weight:600;
 
 }
 .trendingimg{
@@ -228,13 +239,12 @@ footer{
 
 .footsec{
 
-     width:1255px; 
+     width:1250px; 
      height: 480px; 
-    margin-top:100px;
+    margin-top:50px;
   background-color: #000000; 
     color:#ffffff;
-    border:solid 2px;
-    border-color:red;
+    
 
 }
 .foot1{
@@ -242,9 +252,8 @@ footer{
     gap:100x;
     width:1255px; 
     height:250px; 
-    border:solid 2px;
-    border-color: #ff5000;
     margin-top: 50px;
+    padding-top: 50px;
 
 }
  .suppfaq{
@@ -255,9 +264,7 @@ footer{
    margin-left:40px; 
    width: 590px; 
    height: 245px;
-   border-style:solid ;
-   border-width:  3px;
-   border-color: #ae946d;
+   
    } 
 
 .faq{
@@ -265,88 +272,76 @@ footer{
     color:rgb(229, 231, 235);
     font-size:17px;
 } 
-.support{
-    /* font-size: 17px; */
-    border-style:solid ;
-    border-width: 2px;
-    border-color: aquamarine; 
-     /* width:590px;  */
-    /* height:25px; */
 
-}
 .supp{
     width:590px;
     height:220px;
-    border-style: solid;
-    border-color: cornflowerblue;
-    border-width: 2px;
+    
     display:flex;
     column-gap: 150px;
 }
 .sect2{
     width:300px;
     height: 250px;
-    border-style:solid;
-    border-width:2px;
-    border-color:blueviolet;
+   
 }
 .sect3{
     display:flex;
     column-gap: 200px;
     width:300px;
     height:25px;
-    border-style: solid;
-    border-color: brown;
-    border-width: 2px;
 }
 .aboutmenu{
     width:300px;
     height:220px;
-    border-style: solid;
-    border-color: darkgreen;
-    border-width: 2px;
+    
 }
 .sect4{
-    border-style: solid;
-    border-color:chartreuse;
-    border-width: 2px;
+   display: block;
+   column-gap: 20px;
     width: 308px;
     height: 250px;
 }
 .box3{
     display: flex;
     column-gap: 50px;
-   border-style: solid;
-   border-color: cyan;
-   border-width: 2px;
+   
    margin-top: 30px;
    width:302px;
    height: 100px;
 }
 .box4{
-    margin-top: 15px;
-    margin-left: 30px;
-    width:80px;
-    height: 80px;
-    border-width: 2px;
+    /* margin-top: 15px;
+    margin-left: 30px; */
+    width:60px;
+    height: 65px;
+    border-width: 0.8px;
     border-style: solid;
-    border-color: coral;
+    border-color:#ffffff;
+    border-radius: 4px 4px 4px 4px;
 }
 .box5{
-    margin-top: 15px;
-    width:80px;
-    height: 80px;
-    border-width: 2px;
+    /* margin-top: 15px; */
+    width:60px;
+    height: 65px;
+    border-width: 0.8px;
     border-style: solid;
-    border-color: coral;
+    border-color:#ffffff;
+    border-radius: 4px 4px 4px 4px;
 }
 .social{
-    border-style: solid;
-    border-color: crimson;
+    display: flex;
+    column-gap: 40px;
+    padding-top: 10px;
+   
     margin-top: 25px;
-    border-width: 3px;
-    width: 300px;
+    
     height: 30px;
+}
+.exname{
+    width:60px;
+    height: 15px;
+    text-align: center;
 }
 .explore{
     font-size:18px;
@@ -354,9 +349,6 @@ footer{
     margin-top:10px;
     width: 300px;
     height:30px;
-    border-width: 2px;
-    border-style: solid;
-    border-color: blue;
 }
 
 .footsec5{
@@ -365,44 +357,46 @@ footer{
     margin-top: 40px;
     height:80px;
     border-style: solid;
-    border-color: crimson;
-    border-width: 2px;
+    border-color:#ffffff;
+    border-width: 1.2px 0 0 0;
     
 }
 .brand6{
+    display: flex;
+    column-gap: 10px;
     width :300px;
     height:25px;
-    border-style: solid;
     margin-top: 45px;
-    border-color: blueviolet;
-    border-width: 2px;
+    
 }
 .india{
+    display: flex;
+    column-gap: 25px;
     margin-top: 28px;
     margin-left: 300px;
-    width: 140px;
+    font-size: 24px;
+    width: 180px;
+    font-family: Arial, Helvetica, sans-serif;
     height:50px;
+    padding-top: 10px;
+    padding-left: 25px;
     border-style: solid;
-    border-color: antiquewhite;
-    border-width: 2px;
+    border-color:#ffffff;
+    border-width: 1.2px;
 }
 .copyright{
     width:300px;
     height:25px;
     margin-left: 190px;
     margin-top: 45px;
-    border-style: solid;
-    border-width: 2px;
-      border-color: #5a5224;
+    
 }
 .copy2{
     font-size: 12px;
     color:#b6b6b6;
     width:300px;
     height:12px;
-    border-style: solid;
-    border-width: 2px;
-    border-color:#ff5000;
+   
 }
 .copy3{
     font-size:12px;
@@ -410,9 +404,7 @@ footer{
     font-weight: 200;
     width:180px;
     height:10px;
-    border-style: solid;
-    border-width: 2px;
-    border-color: aqua;
+    
     padding-left: 125px;
 }
 
